{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 58,
  "lineage": "edec7538-4e6b-d900-7c80-811db6ab88fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:route-table/rtb-0516e09111aa58229",
            "default_route_table_id": "rtb-0516e09111aa58229",
            "id": "rtb-0516e09111aa58229",
            "owner_id": "639135895298",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "main-route-table"
            },
            "tags_all": {
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b07a67ab19d9fa78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:internet-gateway/igw-05e33a63b92da153a",
            "id": "igw-05e33a63b92da153a",
            "owner_id": "639135895298",
            "region": "ap-south-1",
            "tags": {
              "Name": "JHC-IGW"
            },
            "tags_all": {
              "Name": "JHC-IGW"
            },
            "vpc_id": "vpc-0b07a67ab19d9fa78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:route-table/rtb-0bec39521e1fd6f96",
            "id": "rtb-0bec39521e1fd6f96",
            "owner_id": "639135895298",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e33a63b92da153a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b07a67ab19d9fa78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "639135895298",
            "id": "rtb-0bec39521e1fd6f96",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b63bc28bb06663",
            "region": "ap-south-1",
            "route_table_id": "rtb-0516e09111aa58229",
            "subnet_id": "subnet-077a3c4f7699b8fb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_default_route_table.prod",
            "aws_subnet.private",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ec37b188f2e1286",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bec39521e1fd6f96",
            "subnet_id": "subnet-0a2b028f845566d55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:subnet/subnet-077a3c4f7699b8fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077a3c4f7699b8fb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639135895298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-0b07a67ab19d9fa78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "639135895298",
            "id": "subnet-077a3c4f7699b8fb3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:subnet/subnet-0a2b028f845566d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2b028f845566d55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639135895298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-0b07a67ab19d9fa78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "639135895298",
            "id": "subnet-0a2b028f845566d55",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:639135895298:vpc/vpc-0b07a67ab19d9fa78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02b3a316b4540301d",
            "default_route_table_id": "rtb-0516e09111aa58229",
            "default_security_group_id": "sg-0748ae1a883a77d95",
            "dhcp_options_id": "dopt-05c4840ea4720be62",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b07a67ab19d9fa78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0516e09111aa58229",
            "owner_id": "639135895298",
            "region": "ap-south-1",
            "tags": {
              "Env": "prod",
              "Name": "JavaHome-VPC",
              "Project": "JHC",
              "loc": "Bangalore"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "JavaHome-VPC",
              "Project": "JHC",
              "loc": "Bangalore"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "639135895298",
            "id": "vpc-0b07a67ab19d9fa78",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}